create reading from google sheet