@@ -2,9 +2,8 @@ package by.faeton.lyceumteacherbot.controllers;
 
 import by.faeton.lyceumteacherbot.config.BotConfig;
 import by.faeton.lyceumteacherbot.controllers.handlers.Handler;
-import by.faeton.lyceumteacherbot.repositories.Logger;
+import by.faeton.lyceumteacherbot.utils.Logger;
 import by.faeton.lyceumteacherbot.repositories.UserRepository;
-import by.faeton.lyceumteacherbot.repositories.SheetListener;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
@@ -34,7 +33,7 @@ public class MessageBroker extends TelegramLongPollingBot {
         List<List<BotApiMethod>> collect = handlers.stream()
                 .filter(handler -> handler.isAppropriateTypeMessage(update))
                 .map(handler -> handler.execute(update))
-                .collect(Collectors.toList());
+                .toList();
         if (collect.isEmpty()) {
             sendUserMessage(
                     SendMessage.builder()
